correction des z-indexs

--- a/css/boule.css
+++ b/css/boule.css
@@ -49,7 +49,7 @@ body {
     height: 700px;
     margin: 2% auto;
     perspective: 1000px;
-    z-index: -1;
+    z-index: -2;
 }
 
 .wrapper {
