--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ div.titreContainer h2 {
     font-size: 96px;
     line-height: 113px;
     color: white;
-
+    z-index: -1;
 }
 
 h2:nth-of-type(1) {
