--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -73,7 +73,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: white;
+    background-color: #D9D9D9;
     border: grey 2px solid;
     padding-left: 1em;
     color: black;
